--- a/app/views/editar/editar_passageiro.ejs
+++ b/app/views/editar/editar_passageiro.ejs
@@ -4,43 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Passageiros - Editar</title>
 </head>
 <body>
-    <h1>Atualizar Passageiro</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>        
+    </nav>
     
-    <form action="atualizar/<%= passageiro[0].CD_PSGR %>" method="post">
-        <label>Nome</label>
-		<input type="text" id="nome" name="nome" value="<%= passageiro[0].NM_PSGR %>"/>
-    </br></br>
 
-        <label>Responsável</label>
-		<input type="text" id="responsavel" name="responsavel" value="" />
-    </br></br>
+    <div class="container">
+        <h1 class="h1">Atualizar Passageiro</h1>
+        <form action="atualizar/<%= passageiro[0].CD_PSGR %>" method="post"></form>
+        <div class="form-group">
+            <labe for="nome">Nome</label>
+		    <input type="text" id="nome" name="nome" class="form-control form-control-md" value="<%= passageiro[0].NM_PSGR %>"/>
+        </div>
 
-    
-    <label for="data_nasc">Data de nascimento</label>
-    <input type="text" name="data_nasc" id="data_nasc" name="data_nasc" placeholder="YYYY/MM/DD" 
-    required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
-    title="Insira a data no formato YYYY/MM/DD"/>
-    </br></br>
+        <div class="form-group">
+            <label>Responsável</label>
+		    <input type="text" id="responsavel" name="responsavel" class="form-control form-control-md" value="" />
+        </div>
 
+        <div class="form-group">
+            <label for="data_nasc">Data de nascimento</label>
+            <input type="text" name="data_nasc" id="data_nasc" name="data_nasc" placeholder="YYYY/MM/DD" 
+            required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
+            title="Insira a data no formato YYYY/MM/DD" class="form-control form-control-md"/>
+        </div>
 
-    <label for="pais">País</label>
+        <div class="form-group">
+            <label for="pais">País</label>
 
-    <select name="pais" id="pais">
-        <% for(var i=0;i< paises.length;i++){ %>
-            <option value="<%= paises[i].codigo %>"><%= paises[i].nome %></option>
-        <% } %>
+            <select name="pais" id="pais" class="form-control form-control-md">
+                <% for(var i=0;i< paises.length;i++){ %>
+                    <option value="<%= paises[i].codigo %>"><%= paises[i].nome %></option>
+                <% } %>
 
-    </select>
-    </br></br>
-        
-        
-        <label for="sexo">Sexo</label>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="sexo"  >Sexo</label>
 
             
-            <select name="sexo" id="sexo">
+            <select name="sexo" id="sexo" class="form-control form-control-md">
 
                 
             <option value="M" <% if(passageiro[0].IC_SEXO_PSGR == 'M'){ %> selected="true"  <% } %>>Masculino</option>
@@ -48,25 +56,34 @@
             <option value="O" <% if(passageiro[0].IC_SEXO_PSGR == 'O'){ %> selected="true" <% } %>>Outros</option>
 
             </select>
-    </br></br>
+        </div>
 
-        <label for="estado_civil">Estado Civil</label>
+        <div class="form-group">
+            <label for="estado_civil" >Estado Civil</label>
 
-            <select name="estado_civil" id="estado_civil">
+            <select name="estado_civil" id="estado_civil" class="form-control form-control-md">
             <option value="S" <% if(passageiro[0].IC_ESTD_CIVIL == 'S'){ %> selected="true" <% } %> >Solteiro</option>
             <option value="C" <% if(passageiro[0].IC_ESTD_CIVIL == 'C'){ %> selected="true" <% } %>>Casado</option>
             
 
             </select>
-    </br></br>
+        </div>
 
-    <input type="submit" />
-    <br> <br>
+        
+        <div class="form-group">
+            <input type="submit" class="btn btn-success" />
+        </div>
     
-    </form>
+        </form>
+        
+        <button id="deletar" class="btn btn-danger">Deletar</button>
+    </div>
+    
     
 
-    <button id="deletar">Deletar</button>
+    
+
+    
     
     
 
