--- a/app/views/editar/editar_reserva.ejs
+++ b/app/views/editar/editar_reserva.ejs
@@ -4,43 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Reserva - Editar</title>
 </head>
 <body>
-    <h1>Atualizar Reserva</h1>
 
-    <form action="atualizar/<%= reservas[0].CD_PSGR %>_<%= reservas[0].NR_VOO %>_<%= reservas[0].DT_SAIDA_VOO.split('/') %>" method="post">
-        <label>Nome passageiro</label>
-		<input type="text" id="nome" name="nome" readonly/>
-    </br></br>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
+        <img src="/img/logo.png" />           
+    </nav>
 
-    <label for="data">Data de saída</label>
-    <input type="text" name="data" id="data" placeholder="YYYY/MM/DD" 
-    required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
-    title="Insira a data no formato YYYY/MM/DD" readonly/>
-    </br></br>
+    
 
-    <label for="cod_voo">Número do Voo</label>
+    <div class="container">
+        <h1>Atualizar Reserva</h1>
+        <form action="atualizar/<%= reservas[0].CD_PSGR %>_<%= reservas[0].NR_VOO %>_<%= reservas[0].DT_SAIDA_VOO.split('/') %>" method="post">
+            <div class="form-group">
+                <label>Nome passageiro</label>
+                <input type="text" id="nome" name="nome" class="form-control form-control-md" readonly/>
+            </div>
 
-    <select name="cod_voo" id="cod_voo" readonly>
-        <% for(var i=0;i< voos.length;i++){ %>
-            <option value="<%= voos[i].num %>"><%= voos[i].num %></option>
-        <% } %>
+            <div class="form-group">
+                <label for="data">Data de saída</label>
+                <input type="text" name="data" id="data" placeholder="YYYY/MM/DD" 
+                required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
+                title="Insira a data no formato YYYY/MM/DD" class="form-control form-control-md" readonly/>
+            </div>
 
-    </select>
-</br></br>
+            <div class="form-group">
+                <label for="cod_voo">Número do Voo</label>
 
+                <input type="text" name="cod_voo" id="cod_voo" class="form-control form-control-md" value="" readonly>
+            </div>
 
-        <label>Desconto passagem</label>
-		<input type="text" id="desc_passagem" name="desc_passagem" />
-    </br></br>
+            <div class="form-group">
+                <label>Desconto passagem</label>
+                <input type="text" id="desc_passagem" name="desc_passagem" class="form-control form-control-md" />
+            </div>
 
+            <div class="form-group">
+                <button type="submit" class="btn btn-success" > Enviar</button>
+            </div>
 
+        </form>
+
+        <div class="form-group">
+            <button id="deletar" class="btn btn-danger">Deletar</button>
+        </div>
+    </div>
        
-
-    <input type="submit" >
-    <button id="deletar">Deletar</button>
-    </form>
+    
 </body>
 <script>
 
