--- a/app/views/lista/passageiros.ejs
+++ b/app/views/lista/passageiros.ejs
@@ -4,57 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Passageiros</title>
 </head>
 <body>
-    <a href="/"> Home</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
+        <img src="/img/logo.png" />             
+    </nav>
+    
     <h1>Passageiros</h1>
 
-    <h2>Filtros</h2>
-    <h3>Estado Civil</h3>
     
+   
 
-<input type="checkbox" id="solteiro" name="estado" value="S">
-<label for="solteiro">Solteiro(a)</label><br>
-<input type="checkbox" id="casado" name="estado" value="C">
-<label for="casado">Casado(a)</label><br>
-  
-
-    <h3>Idade</h3>
-
-    <label>Maior que: </label>
-    <input type="number" id="maior_idade" name="idade" value=""/><br>
-    <label>Menor que:</label>
-    <input type="number" id="menor_idade" name="idade" value=""/><br><br>
-
-
-    
-        <input type="text" name="busca" id="busca" required>
+    <div class="container">
         
-        <button type="submit" id="send-busca"> Enviar</button>
+        <div class="row">
+          <div class="col-sm">
+            <h3>Estado Civil</h3>
+            <input type="checkbox" id="solteiro" name="estado" value="S">
+            <label for="solteiro">Solteiro(a)</label><br>
+            <input type="checkbox" id="casado" name="estado" value="C">
+            <label for="casado">Casado(a)</label><br>
+          </div>
+          <div class="col-sm">
+            <h3>Idade</h3>
+
+            <label>Maior que: </label>
+            <input type="number" id="maior_idade" name="idade" value=""/><br>
+            <label>Menor que:</label>
+            <input type="number" id="menor_idade" name="idade" value=""/><br><br>
+          </div>
+          <div class="col-sm">
+              <h3> Buscar </h3>
+            <input type="text" name="busca" id="busca" required>
+        
+        <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
 
         <a href="/passageiros">
-            <button> Limpar </button>
+            <button class="btn btn-secondary"> Limpar </button>
         </a>
-        <br>
-
-
-    <a href="/passageiros/cadastro">
-        <button> Cadastrar</button>
-    </a>
-    <div id="resultados">
-        <table id="table-passageiros">
         
-                <tr>
-                    <td>ID</td>
-                    <td>Nome</td>
-                    <td>Sexo</td>
-                    <td>Data Nasc</td>
-                    <td>Estado Civil</td>
-                    <td>Responsável</td>
-                    <td>País</td>
-                    <td>Editar</td>
-                </tr>
+
+
+        <a href="/passageiros/cadastro">
+            <button class="btn btn-info"> Cadastrar</button>
+        </a>
+          </div>
+        </div>
+      </div>
+    
+
+
+  
+
+    
+
+
+    
+        
+    <div id="resultados" class="container" style="width: 80%;">
+        <table id="table-passageiros" class="table table-sm">
+
+
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Sexo</th>
+                        <th>Data Nasc</th>
+                        <th>Estado Civil</th>
+                        <th>Responsável</th>
+                        <th>País</th>
+                        <th>Editar</th>
+                    </tr>
+
+                </thead>
+                
 
 
             
@@ -69,7 +97,7 @@
                         <td><%= passageiros[i].CD_PAIS %></td>
                         <td> 
                             <a href="/passageiros/editar/<%=passageiros[i].CD_PSGR %>">
-                                <button type="button"> Editar</button></td>
+                                <button type="button" class="btn btn-info"> Editar</button></td>
                             </a>
                             
                     </tr>
