--- a/app/views/lista/uf.ejs
+++ b/app/views/lista/uf.ejs
@@ -4,35 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Unidades Federais</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
+        <img src="/img/logo.png" />             
+    </nav>
 
-    <a href="/"> Home</a>
 
     <h1>Unidades Federais</h1>
 
-    <input type="text" name="busca" id="busca" required>
-    
-    <button type="submit" id="send-busca"> Enviar</button>
-
-    <a href="/uf">
-        <button> Limpar </button>
-    </a> <br>
-   
-    
-    <a href="/uf/cadastro">
-        <button> Cadastrar</button>
-    </a>
-
-    <div id="resultados">
-        <table id="table-unidades">
+    <div class="container">
+        <div  class="row">
+            <div  class="col-sm">
+                <input type="text" name="busca" id="busca" required>
         
+                <button class="btn btn-secondary" type="submit" id="send-busca"> Enviar</button>
+
+                <a href="/uf">
+                    <button class="btn btn-secondary"> Limpar </button>
+                </a> <br>
+            
+                
+                <a href="/uf/cadastro">
+                    <button class="btn btn-info"> Cadastrar</button>
+                </a>
+            </div>
+        </div>
+
+    </div>
+    
+
+
+    <div id="resultados" class="container" style="width: 80%;">
+        <table id="table-unidades" class="table table-sm">
+            <thead class="thead-dark">
                 <tr>
                     <td>Sigla UF</td>
                     <td>Nome UF</td>
                     
                 </tr>
+            </thead>
 
 
             
@@ -44,7 +59,7 @@
                         
                         <td> 
                             <a href="/uf/editar/<%=unidades[i].SG_UF %>">
-                                <button type="button"> Editar</button></td>
+                                <button type="button" class="btn btn-info"> Editar</button></td>
                             </a>
                             
                     </tr>
