--- a/app/views/lista/passageiros.ejs
+++ b/app/views/lista/passageiros.ejs
@@ -165,6 +165,7 @@
 
                             var button = document.createElement('button');
                             button.innerHTML = 'Editar';
+                            button.className = 'btn btn-info';
 
                             a.appendChild(button);
 
@@ -251,6 +252,7 @@
 
                             var button = document.createElement('button');
                             button.innerHTML = 'Editar';
+                            button.className = 'btn btn-info';
 
                             a.appendChild(button);
 
