--- a/app/views/editar/editar_rota_voo.ejs
+++ b/app/views/editar/editar_rota_voo.ejs
@@ -3,47 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Rota de voo - Editar</title>
 </head>
 <body>
-    <h1>Atualizar Rota de voo</h1>
 
-    <form action="/rotas/editar/atualizar/<%= rota[0].NR_ROTA_VOO %>" method="post">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         
-        <label>Código Aeroporto Origem</label>
-
-        <select name="cod_origem" id="cod_origem">
-            <% for(var i=0;i< aeroportos.length;i++){ %>
-                <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
-            <% } %>
-
-        </select>
-
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
+        <img src="/img/logo.png" />           
+    </nav>
     
-    </br></br>
 
-    <label>Código Aeroporto Destino</label>
+    <div class="container">
+        <h1>Atualizar Rota de voo</h1>
+        <form action="/rotas/editar/atualizar/<%= rota[0].NR_ROTA_VOO %>" method="post">
+        <div class="form-group">
+            <label>Código Aeroporto Origem</label>
 
-    <select name="cod_dest" id="cod_dest">
-        <% for(var i=0;i< aeroportos.length;i++){ %>
-            <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
-        <% } %>
+            <select name="cod_origem" id="cod_origem" class="form-control form-control-md">
+                <% for(var i=0;i< aeroportos.length;i++){ %>
+                    <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
+                <% } %>
 
-    </select>
+            </select>
+        </div>
 
+        <div class="form-group">
+            <label>Código Aeroporto Destino</label>
 
-    </br></br>
+            <select name="cod_dest" id="cod_dest" class="form-control form-control-md">
+                <% for(var i=0;i< aeroportos.length;i++){ %>
+                    <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
+                <% } %>
 
+            </select>
+        </div>
 
-        <label>Valor passagem</label>
-		<input type="number" id="val_passagem" name="val_passagem" value="<%= rota[0].VR_PASG %>"/>
-    </br></br>
+        <div class="form-group">
+            <label>Valor passagem</label>
+		    <input type="number" id="val_passagem" name="val_passagem" class="form-control form-control-md" value="<%= rota[0].VR_PASG %>"/>
+        </div>
 
-    <input type="submit" >
-
+        <div class="form-group">
+            <input type="submit" class="btn btn-success" >
+        </div>
+        </form>
+        <div class="form-group">
+            <button id="deletar" class="btn btn-danger">Deletar</button>
+        </div>
+    </div>
     
-    </form> <br>
-    <button id="deletar">Deletar</button>
     
 </body>
 
