--- a/app/views/lista/rotas-voo.ejs
+++ b/app/views/lista/rotas-voo.ejs
@@ -4,41 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Rotas de voo</title>
 </head>
 <body>
-    <a href="/"> Home</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        
+        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
+        <img src="/img/logo.png" />           
+    </nav>
+    
+    
     <h1>Rotas de voo</h1>
 
-    <h2>Filtros</h2>
-     
-<input type="radio" id="com_reservas" name="reservas" value="1">
-<label for="com_reservas">Somente com reservas</label><br>
-<input type="radio" id="sem_reservas" name="reservas"  value="0">
-<label for="sem_reservas">Sem reservas</label><br><br><br>
+    <div class="container">
+        <div class="row">
 
-<input type="text" name="busca" id="busca" required>
-        
-<button type="submit" id="send-busca"> Enviar</button>
-<a href="/rotas">
-    <button> Limpar </button>
-</a> <br>
-    
-    <a href="/rotas/cadastro">
-        <button> Cadastrar</button>
-    </a>
+            <div class="col-sm">
+                <h2>Filtros</h2>
+                <input type="radio" id="com_reservas" name="reservas" value="1">
+                <label for="com_reservas">Somente com reservas</label><br>
+                <input type="radio" id="sem_reservas" name="reservas"  value="0">
+                <label for="sem_reservas">Sem reservas</label>
+            </div>
 
-    <div id="resultados">
-        <table id="table-rotas">
+            <div class="col-sm">
+                <h3>Buscar</h3>
+                <input type="text" name="busca" id="busca" required>
         
-                <tr>
-                    <td>NR_ROTA_VOO</td>
-                    <td>CD_ARPT_ORIG</td>
-                    <td>CD_ARPT_DEST</td>
-                    <td>VR_PASG</td>
+                <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
+                <a href="/rotas">
+                    <button class="btn btn-secondary"> Limpar </button>
+                </a> 
                     
-                    <td>Editar</td>
-                </tr>
+                <a href="/rotas/cadastro">
+                    <button class="btn btn-info"> Cadastrar</button>
+                </a>
+            </div>
+            
+        </div>
+    </div>
+    
+     
+
+
+
+
+    <div id="resultados" class="container">
+        <table id="table-rotas" class="table table-sm">
+                
+                <thead class="thead-dark">
+                    <tr>    
+                        <th>NR_ROTA_VOO</th>
+                        <th>CD_ARPT_ORIG</th>
+                        <th>CD_ARPT_DEST</th>
+                        <th>VR_PASG</th>
+                        
+                        <th>Editar</th>
+                    </tr>
+                </thead>
+                
 
 
             
@@ -51,7 +76,7 @@
                         
                         <td> 
                             <a href="/rotas/editar/<%=rotas[i].NR_ROTA_VOO %>">
-                                <button type="button"> Editar</button></td>
+                                <button type="button" class="btn btn-info" > Editar</button></td>
                             </a>
                             
                     </tr>
