--- a/app/views/cadastro/cadastro_uf.ejs
+++ b/app/views/cadastro/cadastro_uf.ejs
@@ -3,24 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>UF - Cadastro</title>
 </head>
 <body>
-    <h1>Cadastro Unidade Federal</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h1 class="h1"> SDA </h1></a>        
+    </nav>
 
-    <form action="/uf/cadastrar" method="post">
-        
-    <label>Nome</label>
-	<input type="text" id="nome" name="nome" value=""/>
-    </br></br>
+    <div style="width: 50%;" class="container">
 
-    <label>Sigla UF</label>
-	<input type="text" id="sigla" name="sigla" value=""/>
-    </br></br>
+        <h1>Cadastro Unidade Federal</h1>
 
-    <input type="submit" id="enviar" disabled>
-    </form>
+        <form action="/uf/cadastrar" method="post">
+
+            <div class="form-group">
+                <label>Nome</label>
+                <input type="text" id="nome" name="nome"  class="form-control form-control-md"  value=""/>
+                </br></br>
+            </div>
+
+            <div class="form-group">
+                <label>Sigla UF</label>
+                <input type="text" id="sigla" name="sigla" class="form-control form-control-md" value=""/>
+                </br></br>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" id="enviar" class="btn btn-success" disabled>
+                
+            </div>
+        </form>
+            
+
+    </div>
+
+   
 </body>
 
 <script>
